fix project spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -918,7 +918,7 @@ a {
 		font-size: var(--fs-m);
 	}
 }
-@media (min-width: 400px) {
+@media (min-width: 600px) {
 	.gallery {
 		width: 25em;
 	}
